--- a/CompozeElectron/Views/Shared/_Layout.cshtml
+++ b/CompozeElectron/Views/Shared/_Layout.cshtml
@@ -4,37 +4,34 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - CompozeElectron</title>
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/CompozeElectron.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/style.css" asp-append-version="true" />
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Compoze</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
+        <nav class="navbar nav-dark">
+                <a class="nav-title" asp-area="" asp-controller="Home" asp-action="Index">Compoze</a>
+                <span class="nav-icon"></span>
+                <div class="item-holder">
                     @if(User.Identity.IsAuthenticated)
                     {
-                        <ul class="navbar-nav flex-grow-1">
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="UserInfo" asp-action="Dashboard">Dashboard</a>
+                        <ul>
+                            <li>
+                                <p class="nav-item active"><a asp-area="" asp-controller="UserInfo" asp-action="Dashboard">Dashboard</a></p>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="UserInfo" asp-action="UserSettings">Settings</a>
+                                <p class="nav-item"></p><a asp-area="" asp-controller="UserInfo" asp-action="UserSettings">Settings</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Logout">Log Out</a>
+                                <p class="nav-item"></p><a asp-area="" asp-controller="Account" asp-action="Logout">Log Out</a>
                             </li>
                         </ul>
                     } else {
-                        <ul class="navbar-nav flex-grow-1">
+                        <ul>
+                            <li class="nav-item active">
+                                <p class="nav-item active"></p><a asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Login">Log In</a>
+                                <p class="nav-item"></p><a asp-area="" asp-controller="Account" asp-action="Login">Log In</a>
                             </li>
                         </ul>
                     }
@@ -50,11 +47,9 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2022 - CompozeElectron - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            Copyriht&copy; Ethan Calabrese 2022<a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
