--- a/CompozeElectron/Views/Shared/_Layout.cshtml
+++ b/CompozeElectron/Views/Shared/_Layout.cshtml
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - CompozeElectron</title>
+    <script src="https://kit.fontawesome.com/4a6c085fe1.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="~/css/style.css" asp-append-version="true" />
 </head>
 <body>
@@ -22,7 +23,7 @@
                 }
             </div>
             <a href="javascript:void(0);" class="nav-icon">
-                <i class="fa fa-bars"></i>
+                <i class="fa-solid fa-bars"></i>
             </a>
         </div>
     </header>
