basic settings layout

--- a/CompozeElectron/Views/Shared/_Layout.cshtml
+++ b/CompozeElectron/Views/Shared/_Layout.cshtml
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - CompozeElectron</title>
     <script src="https://kit.fontawesome.com/4a6c085fe1.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/style.css" asp-append-version="true" />
 </head>
 <body>
