--- a/CompozeElectron/Views/UserInfo/Dashboard.cshtml
+++ b/CompozeElectron/Views/UserInfo/Dashboard.cshtml
@@ -2,6 +2,11 @@
     ViewData["Title"] = "Dashboard";
 }
 
-<div class="contain-all">
-    
+<div class="background-l-grey stack-sm row mt-2">
+    <div class="col-3 border-round background-lighter">
+        <p>Projects (dropdown)</p>
+    </div>
+    <div class="col-9 border-round background-lighter">
+        <h2>@ViewData["Title"]</h2>
+    </div>
 </div>
