--- a/CompozeElectron/Views/Home/Index.cshtml
+++ b/CompozeElectron/Views/Home/Index.cshtml
@@ -3,6 +3,10 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Welcome to <strong class="highlight-effect">Compoze</strong></h1>
+    <p>Our mission is to create a completely customizable, user friendly writing application.</p>
+    <p>We will eventually be cross-platform!</p>
+    <p>Sign up or log in to access your data.</p>
 </div>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js"></script>
+<script>hljs.initHighlightingOnLoad();</script>
