--- a/CompozeElectron/Views/Home/Index.cshtml
+++ b/CompozeElectron/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome to <strong class="highlight-effect">Compoze</strong></h1>
+    <h1 class="my-3">Welcome to <strong class="highlight-effect">Compoze</strong></h1>
     <p>Our mission is to create a completely customizable, user friendly writing application.</p>
     <p>We will eventually be cross-platform!</p>
     <p>Sign up or log in to access your data.</p>
