--- a/CompozeElectron/Views/UserInfo/Dashboard.cshtml
+++ b/CompozeElectron/Views/UserInfo/Dashboard.cshtml
@@ -1,12 +1,24 @@
+@using CompozeData.Models
 @{
     ViewData["Title"] = "Dashboard";
+    List<Project> projects = ViewBag.Projects;
 }
 
 <div class="background-l-grey stack-sm row mt-2">
     <div class="col-3 border-round background-lighter">
-        <p>Projects (dropdown)</p>
+        <p><strong>Projects</strong></p>
+        @if(projects != null && projects.Count > 0) 
+        {
+            @foreach(Project p in projects)
+            {
+                <p class="project-name">↳ @p.ProjectName</p>
+            }
+        } else {
+            <p class="project-name">↳ No Projects Found</p>
+        }
     </div>
     <div class="col-9 border-round background-lighter">
         <h2>@ViewData["Title"]</h2>
+        <div class="fancybutton mx-2">+ New Project</div>
     </div>
 </div>
