framework for new project functions, styling for other things

--- a/CompozeElectron/Views/Shared/_UserProfile.cshtml
+++ b/CompozeElectron/Views/Shared/_UserProfile.cshtml
@@ -7,4 +7,4 @@
         <p>@Model.EmailAddress</p>
     </div>
 </div>
-<button>Edit Information</button>
+<button class="fancybutton">Edit Information</button>
