--- a/CompozeElectron/Styles/basic/_fonts.scss
+++ b/CompozeElectron/Styles/basic/_fonts.scss
@@ -77,6 +77,10 @@ ol>li {
     color: white !important;
 }
 
+.txt-light {
+    color: $txt-light !important;
+}
+
 // Weights
 .txt-w-light { 
     font-weight: 300;
