--- a/CompozeElectron/Views/UserInfo/Dashboard.cshtml
+++ b/CompozeElectron/Views/UserInfo/Dashboard.cshtml
@@ -19,6 +19,6 @@
     </div>
     <div class="col-9 border-round background-lighter">
         <h2>@ViewData["Title"]</h2>
-        <div class="fancybutton mx-2">+ New Project</div>
+        <div class="fancybutton"><a class="txt-light no-deco mx-2" href="/UserInfo/NewProject">+ New Project</button></div>
     </div>
 </div>
