--- a/CompozeElectron/Views/UserInfo/NewProject.cshtml
+++ b/CompozeElectron/Views/UserInfo/NewProject.cshtml
@@ -1,3 +1,29 @@
 @{
     ViewData["Title"] = "New Project";
 }
+
+<div>
+    <form action="CreateProject" method="post">
+        <div class="row">
+            <label for="projectName">Project Name: </label>
+            <input type="text" name="projectName" id="projectName">
+        </div>
+        <div class="row">
+            <label for="authorName">Author Name: </label>
+            <input type="text" name="authorName" id="authorName">
+        </div>
+        <div class="row">
+            <label for="projectGenre">Genre: </label>
+            <input type="text" name="projectGenre" id="projectGenre">
+        </div>
+        <div class="row">
+            <label for="documentLayout">Project Layout: </label>
+            <select name="documentLayout" id="documentLayout">
+                <option value="chapters">Chapters</option>
+                <option value="scenes">Scenes</option>
+                <option value="connected">Connected</option>
+            </select>
+        </div>
+        <input type="submit" value="Create" />
+    </form>
+</div>
