--- a/CompozeElectron/Styles/style.scss
+++ b/CompozeElectron/Styles/style.scss
@@ -1,7 +1,7 @@
 @import 'basic/reset';
 @import 'basic/color';
 @import 'basic/fonts';
-@import 'positions';
+@import 'basic/positions';
 @import 'basic/transitions';
 @import 'mixins';
 @import 'borders';
@@ -489,6 +489,11 @@ footer {
             align-items: center !important;
         }
 
+        >* {
+            height: auto;
+            min-height: 0;
+        }
+
         &.center-x {
             align-items: center;
         }
@@ -569,6 +574,10 @@ footer {
             margin-left: 0 !important;
             margin-right: 0 !important;
             align-items: center !important;
+        }
+        >* {
+            height: auto;
+            min-height: 0;
         }
 
         &.center-x {
