--- a/CompozeElectron/Views/Shared/_Layout.cshtml
+++ b/CompozeElectron/Views/Shared/_Layout.cshtml
@@ -34,12 +34,12 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
-        <div class="container">
-            Copyright&copy; Ethan Calabrese 2022<a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-        </div>
-    </footer>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
+    <footer class="border-top footer text-muted">
+        <div class="container">
+            Copyright&copy; Ethan Calabrese 2022
+        </div>
+    </footer>
 </html>
