doc category & project dashboard link

--- a/CompozeElectron/Views/Shared/_ProjectList.cshtml
+++ b/CompozeElectron/Views/Shared/_ProjectList.cshtml
@@ -2,12 +2,11 @@
 @model ProjectListViewModel;
 
 <div class="col-3 border-round background-lighter dashboard-box h-auto-sm">
-    <h6 class="txt-font-basic">Projects</h6>
+    <h6 class="txt-font-basic"><a class="no-deco" href="/UserInfo/Dashboard">Projects</a></h6>
     @if(Model.Projects != null && Model.Projects.Count > 0) 
     {
         @foreach(Project p in Model.Projects)
         {
-            //string redirect = "/UserInfo/Project/" + @p.ProjectId;
             <p class="project-name"><a class="no-deco" href="/UserInfo/Project/@p.ProjectId">↳ @p.ProjectName</a></p>
         }
     } else {
