user setting stuff

--- a/CompozeElectron/Styles/_thisproject.scss
+++ b/CompozeElectron/Styles/_thisproject.scss
@@ -81,3 +81,10 @@
     gap: 1rem;
     grid-template-columns: repeat(3, 1fr);
 }
+
+textarea {
+    min-height: 500px;
+    max-width: 100%;
+    margin: 0px;
+    font-size: 12pt;
+}
