--- a/CompozeElectron/Views/UserInfo/NewProject.cshtml
+++ b/CompozeElectron/Views/UserInfo/NewProject.cshtml
@@ -1,5 +1,7 @@
 @{
     ViewData["Title"] = "New Project";
+    string authorName = ViewBag.AuthorName;
+    string projectLayout = ViewBag.ProjectLayout;
 }
 
 <div>
@@ -10,7 +12,7 @@
         </div>
         <div class="row space-between">
             <label for="authorName">Author Name: </label>
-            <input type="text" name="authorName" id="authorName">
+            <input type="text" value="@authorName" name="authorName" id="authorName">
         </div>
         <div class="row space-between">
             <label for="projectGenre">Genre: </label>
@@ -18,11 +20,20 @@
         </div>
         <div class="row space-between">
             <label for="documentLayout">Project Layout: </label>
-            <select name="documentLayout" id="documentLayout" class="w-50">
-                <option value="chapters">Chapters</option>
-                <option value="scenes">Scenes</option>
-                <option value="connected">Connected</option>
-            </select>
+            @if(projectLayout != "")
+            {
+                <select name="documentLayout" value="@projectLayout" id="documentLayout" class="w-50">
+                    <option value="chapters">Chapters</option>
+                    <option value="scenes">Scenes</option>
+                    <option value="connected">Connected</option>
+                </select>
+            } else {
+                <select name="documentLayout" value="Chapters" id="documentLayout" class="w-50">
+                    <option value="chapters">Chapters</option>
+                    <option value="scenes">Scenes</option>
+                    <option value="connected">Connected</option>
+                </select>
+            }
         </div>
         <input type="submit" value="Create" class="mt-2 mb-1" />
     </form>
