--- a/CompozeElectron/Views/Shared/_Layout.cshtml
+++ b/CompozeElectron/Views/Shared/_Layout.cshtml
@@ -2,14 +2,12 @@
 @using CompozeData.Services
 @{
     bool darkMode = false;
-    string color = "";
+    string color = "#1c0766";
     @if(User.Identity.IsAuthenticated)
     {
         string userId = User.FindFirst(c => c.Type == ClaimTypes.NameIdentifier).Value;
         darkMode = ViewBag.Dal.DoesUserUseDarkMode(userId);
-        color = ViewBag.Dal.GetColorToUse(userId);
-    } else {
-        color = ViewBag.Dal.GetColorToUse("");
+        color = ViewBag.Dal.GetUser(userId).CustomColor;
     }
 }
 
