--- a/CompozeElectron/Views/Shared/_AppSettings.cshtml
+++ b/CompozeElectron/Views/Shared/_AppSettings.cshtml
@@ -11,7 +11,7 @@
         <div class="row space-between mt-1">
             <label for="customColor">Accent Colour: </label>
             <input type="color" value="@Model.CustomColor" name="customColor" id="customColor" />
-            <button id="default-accent-btn">Default</button>
+            <button id="default-accent-btn" class="fancybutton">Default</button>
         </div>
         <div class="row space-between mt-1">
             <label for="authorName">Default Author: </label>
@@ -25,7 +25,7 @@
                 <option value="Connected">Connected</option>
             </select>
         </div>
-        <input class="mt-2" type="submit" value="Update"/>
+        <input class="mt-2" type="submit" value="Update" id="update"/>
     </form>
 </div>
 <script>
