--- a/CompozeElectron/Views/Shared/_AppSettings.cshtml
+++ b/CompozeElectron/Views/Shared/_AppSettings.cshtml
@@ -1,4 +1,7 @@
 @model CompozeElectron.Models.UserProfileViewModel
+@{
+    Console.WriteLine("CustomColor: " + Model.CustomColor);
+}
 
 <div class="border-all border-round p-1 m-auto mt-2">
     <h1 class="txt-a-center">App Settings</h1>
